<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Terp FreeWhere</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">Menu</string>
    <string name="free_food">Free Food</string>
    <string name="free_swag">Free Swag</string>
    <string name="free_events">Free Events</string>
    <string name="all">All</string>
    <string name="signup">Signup</string>
    <string name="organization">Organization?</string>
    <string name="title_activity_submit_free">SubmitFree</string>
    <string name="hello_world">Hello world!</string>
    <string name="org_name">Organization Name:</string>
    <string name="cat_of_free">Category Of Free: (Eg.food,swag,activities) sep. by comma</string>
    <string name="whats_free">What is Free?</string>
    <string name="location">Location:</string>
    <string name="date">Date of Event: (M/D/YY,hr:min) </string>
    <string name="small_description">Small Description:</string>
    <string name="submit">Submit</string>
    <string name="nocaps">No Caps</string>

</resources>
